@@ -23,16 +23,17 @@ _func3:
 	.type func3, %function
 func3:
 .Lbegin_func3:
-	.int 0
-	.int 0
+	nop
+	nop
 .Lend_func3:
 	.size func3, .-func3
 _func:
 	.type func, %function
 func:
 .Lbegin_func:
-	.int 0
-	.int 0
+	nop
+.Lfunc_1:
+	nop
 .Lend_func:
 	.size func, .-func
 .Lend_text1:
@@ -225,7 +226,7 @@ func:
 	.byte		0	/* DW_LNE_set_address */
 	.uleb128	5
 	.byte		2
-	.4byte		.Lbegin_func+1
+	.4byte		.Lfunc_1
 
 	.byte		3	/* DW_LNS_advance_line */
 	.sleb128	1	/* ... to 8 */
