@@ -1,5 +1,16 @@
 2015-03-26  Yao Qi  <yao.qi@linaro.org>
 
+	* gdb.linespec/break-asm-file0.s (func2): Use nop instead of
+	.int 0.
+	(func): Likewise.  Add .Lfunc_1 label.
+	Use .Lfunc_1 label.
+	* gdb.linespec/break-asm-file1.s (func3): Use nop instead of
+	.int 0.
+	(func): Likewise.
+	Use .Lfunc_1 label.
+
+2015-03-26  Yao Qi  <yao.qi@linaro.org>
+
 	* gdb.linespec/break-asm-file.exp: Don't call prepare_for_testing.
 	Call gdb_compile instead to compile each .s files without debug
 	information.
